mule-management-console/v/3.6/defining-slas-and-alerts.adoc
= 定义SLA和警报

*  link:/mule-management-console/v/3.6/defining-slas-and-alerts[创建警报定义]
*  link:/mule-management-console/v/3.6/defining-slas-and-alerts[编辑警报定义]
*  link:/mule-management-console/v/3.6/defining-slas-and-alerts[警报数据字段]
*  link:/mule-management-console/v/3.6/defining-slas-and-alerts[常见警报字段]
*  link:/mule-management-console/v/3.6/defining-slas-and-alerts[自定义警报类型字段]
*  <<Exception Alert Type Fields>>
*  link:/mule-management-console/v/3.6/defining-slas-and-alerts[警报表达式中使用的属性]

使用“警报”选项卡查看引发的警报并定义新警报或编辑现有警报定义。

在警报屏幕中，单击导航树中的警报定义节点以查看当前定义的所有警报。在此窗格中，您可以创建新警报并编辑有关现有警报的详细信息。下图说明了创建和管理警报的详细信息窗格。该窗格显示现有警报的摘要，并提供用于添加新警报，控制警报（激活或禁用选定警报）以及删除它们的按钮。

image:alerts-manage.png[警报管理的] +

“管理警报”窗格列出当前设置的所有警报，并显示有关每个警报的以下信息：

* 提醒的名称

* 警报的描述

* 警报严重性级别（致命，重要，主要，次要，信息）

* 警报类型（例如低内存，服务器关闭，服务器关闭，线程池SLA，URL运行状况）。您还可以根据自定义表达式提供警报。

* 警报适用的服务器（或服务器组）

* 当前警报状态（“活动”，“禁用”）。

要创建新的警报定义，请单击新建警报按钮。要管理现有警报，请点击警报警报复选框。使用控制按钮来激活或禁用选定的警报。使用删除警报按钮删除选定的警报。在警报实际删除之前，会有一个对话框提示您确认删除。

点击警报名称以查看和编辑该警报的详细信息。

*Note:*目前，OpenJDK环境中不支持低内存警报。

== 创建警报定义

点击新建警报按钮创建一个新警报。 “添加警报”窗格显示“类型”字段。从类型字段的下拉列表中，选择警报类型（自定义表达式，例外，JMX属性，日志正则表达式，低内存，服务器关闭，服务器启动，线程池，URL运行状况）。

image:new-alert-type.png[新的警报型]

选择警报类型后，该窗格将展开以显示输入描述警报的数据的其他字段。不同的警报类型有不同的数据字段。 “添加警报”窗格显示您选择的警报类型的相应字段，然后输入必需和可选数据。 （请注意，大多数字段是必需的，如果您省略了必填字段的数据，则控制台将以红色突出显示该字段。）在可能的情况下，控制台提供默认值，您可以更改这些值或保持原样。您必须在完成警报条件的定义后单击保存。

例如，下图显示了服务器关闭警报类型的“添加警报”窗格。

image:alerts-new.png[提醒新]

输入警报的名称以及可选的描述。从“严重性”下拉列表中，选择警报的严重级别（致命，严重，主要，次要，信息）。对于“服务器”或“组”字段，选择应用警报的服务器或组（默认值为无），然后检查警报是否处于活动状态。

需要数据的字段标有感叹号 image:warning.png[（警告）]，如果留为空白，则以红色突出显示。 （下图中标有必填项。）有关这些字段的更多信息，请参见下文。

如果要创建自定义警报，请选择自定义表达式，然后完成适当的字段（例如目标对象表达式和类型，目标值表达式，阈值表达式，批处理大小等字段）以定义警报条件。

请注意，输入字段集根据警报的类型而变化。例如，对于低内存类型的警报，系统会提示您输入以下数据，如下图所示。另外，取决于警报的类型，默认值可能出现在某些字段中。对于低内存警报类型，严重性字段默认为“严重”。您可以更改严重性级别。您可以将警报应用于任何内存池，或从列表中选择特定的内存池。阈值比率也是必需的（请注意，它以红色突出显示并标有红色感叹号），因为此字段是此类警报所必需的。

image:alerts-lowmem.png[警报-lowmem]

“内存池”下拉列表包含服务器的所有内存池。要自己查看，请单击服务器选项卡，然后单击内存选项卡。 （见下图）

image:memory-cache.png[内存缓存]

相比之下，对于自定义表达式警报类型，系统会提示您输入以下数据，如下所示。注意，对于这种类型的警报，在选择服务器之后，可以使用“应用程序”字段下拉列表来选择在该服务器上运行的应用程序，以便将警报应用到该应用程序。 （有关更多信息，请参阅下面的<<Custom Alert Type Fields>>。）

image:alerts-custom-expression.png[警报定制表达式]

下图显示了异常警报类型的示例条目。为警报类型选择例外后，屏幕将展开并显示您必须输入的其他数据字段。 “说明”和“应用程序”字段都是可选的，但您必须为其他字段选择或输入数据。单击保存以保存新警报，或单击取消退出而不保存警报。 （有关更多信息，请参阅下面的<<Exception Alert Type Fields>>。）

image:alerts-exception.png[警报的异常]

== 编辑警报定义

在管理警报摘要窗格中单击警报名称。该窗格以与创建警报相同的格式显示之前为警报输入的数据，并且可以进行所需的更改。

请注意，您无法更改警报的名称。如果您需要更改警报的名称，则应删除它并使用新名称重新创建它。

以下部分提供了有关如何设置警报字段的更多信息。

== 警报数据字段

以下部分介绍了您在设置不同类型的警报时可能为特定字段选择或输入的数据。

== 常见警报字段

如前所述，不同的警报类型可能会提示您输入不同的数据字段。大多数警报，无论类型如何，都包括以下通用字段：

* 启动一次 - 选中此字段后，一旦满足指定的条件，就会引发警报。但是，任何后续触发器都不会生成新的警报。当监视值低于警报阈值级别时，控制台会认为警报被重置。此时，控制台允许再次提醒新警报。

* 周期（毫秒） - 此字段指示检查值与阈值之间的轮询间隔（以毫秒为单位）。 Period字段有效地定义了您的监控解决方案的精确度和响应度，特别是在您将其与批量大小字段一起使用时。但是，请记住以下权衡：监视值越频繁，监视开销对系统的影响就越大。您应该小心不要将轮询间隔设置得太低。

* 批量大小 - 此字段提供可能在阈值附近振荡的值的“衰减”。将批量大小设置为整数值。将批量大小设置为1或更低值将完全禁用抑制;也就是说，每次根据剩下的一组规则触发警报。否则，将“批次大小”设置为大于1的值会引发仅警告*after*超过批次大小次数*in a row*的警报。例如，请考虑将“批次大小”设置为3的情况。在此方案中，只有在阈值连续超过三次后，才会发出警报。如果发生两次违规事件，然后该值降至阈值以下，则不会发出警报。

*Note:*周期和批量大小耦合在一起，因为只在轮询时执行检查。也就是说，没有持续的更新流。

以下是计算“批量大小”和“期间”值的简单公式或经验法则：
 （批量大小*期间）=（衰减期间，以毫秒为单位）

例如，这里是你如何应用这个公式。假设您想要在流量高于一分钟的情况下收到警报。您可以将此模型设置为20,000的期间值和3的批量值。

== 自定义警报类型字段

自定义警报以Groovy脚本片段的形式执行。执行上下文与Mule中的其他脚本完全相同。链接描述这些脚本的上下文绑定：/mule-user-guide/v/3.6/scripting-module-reference#script-context-bindingsScript Context Bindings]。

创建自定义提醒时，您需要设置以下字段：

* 目标对象表达式 - 一个Groovy表达式，用于获取对其属性将被检查的对象的引用。例如：`registry.'threadpool.MyFlow'`。在这里，`'threadpool.MyFlow'`是注册表中流程线程池的关键。 （请注意，引号用于转义其中包含点的名称。）请记住，参考查找不限于注册表。例如，您可以使用对自定义缓存对象的静态引用。您必须遵守的唯一规则是为班级使用完全限定名称（FQN）。

* 目标值表达式 - 一个Groovy表达式，用于计算用于检查下一个阈值的实际值。请注意，该对象可用作此字段的`payload`变量。例如，`payload.activeTasksCount`查询线程池中此时在此池中物理执行的任务数。

* 阈值表达式 - 一种Groovy表达式，用于计算要检查的高阈值级别的值。例如，以下表达式将动态地查询线程池的线程配置文件，然后将阈值设置为其容量的50％（结果会被截断以放弃任何分数）：`(registry.'threadpool.MyFlow'.threadingProfile.maxThreadsActive / 2) as Integer`。请注意，阈值表达式可以简单地设置为静态值。但是，请确保您使用的值不包含任何分数。

您还应该查看管理控制台中的“池”选项卡，以查看实例的实际池名称。

针对Threshold Expression给出的示例是管理控制台中捆绑线程池警报的一个非常简单的示例。您应该随时探索将Groovy和Mule结合使用的全部功能。

== 异常警报类型字段

异常警报允许您拦截在您的Mule应用程序中抛出的异常。

创建异常警报时，您需要设置以下字段：

* 异常类型 - 标识要截取的异常类型的完全限定类名称（包括包）。如果需要，您可以提供通配符（\'\ *') to match packages (ie com.foo.*）。警报只会触发匹配的异常类型（即没有层次结构支持）。

警报表达式中使用的== 属性

有许多属性的值可以合并到警报目标和通知中。您可以使用上面显示的表达式语法合并这些属性。某些属性对所有警报类型都是通用的，而其他属性则属于特定的警报类型。

以下属性对所有警报类型都是通用的。 （类`com.mulesoft.console.alert.RaisedAlert`包含警报属性的声明。）

[%header%autowidth.spread]
|===
|属性 |说明
| id  |流程标识符
|名称 |流名称
| serverId  |服务器标识符
| serverName  |服务器名称
|描述 |提醒警报的描述
|时间戳 |提醒时间
|来源 |提出警报的来源
|严重性 |警报的严重程度，如致命或严重
|类型 |警报的类型，例如低内存或异常
|===

除了上面显示的通用属性之外，某些警报类型还有其他可访问的属性。下表显示了定义附加属性的警报类型和特定属性。

[%header%autowidth.spread]
|===
|警报类型 |属性 |说明
|例外提示 |   | 
|   | exceptionMessage  |描述异常的简短文本消息
|   | exceptionFullMessage  |描述异常的完整或完整文本消息
|   | exceptionRootCause  |异常的原因
|基于阈值的警报（可能是自定义，线程池或JMX警报） |   | 
|   | actualValue  |导致警报提升的值
|   |阈值 |引发警报的阈值
|   | thresholdEventType  |引发警报的事件的类型
|网址健康警报 |   | 
|   | urlStatus  |来自URL的错误状态标识符
|   | urlMessage  |来自URL的错误消息
|日志提示 |   | 
|   | logFile  |日志文件名称
|   | logLine  |日志文件中的行
|===
